# kayo-api

./: .env  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: audit.yml  docker.yml  quickstart.yml
src/: config.rs  functions.rs  lib.rs  main.rs
src/routes/: html.rs  mod.rs
src/structs/: mod.rs  team.rs
